# mirrorme

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
src/mirrorme/: cli.py  mirror.py
