[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mirrorme"
version = "0.2.0"
description = "Playwright-powered offline website mirroring with relative links."
authors = [{ name = "John Siciliano", email = "john@johnsiciliano.com" }]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
dependencies = [
  "playwright>=1.46",
  "beautifulsoup4>=4.12.2",
  "tldextract>=5.1.2",
  "typer>=0.12.3",
  "rich>=13.7.1"
]

[project.scripts]
mirrorme = "mirrorme.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

